[FIX] too big overflowing icon in modifier conditions list

--- a/pandora-client-web/src/components/wardrobe/views/characterModifiers/conditions/style.scss
+++ b/pandora-client-web/src/components/wardrobe/views/characterModifiers/conditions/style.scss
@@ -56,6 +56,13 @@
 				padding: 0.25em;
 			}
 		}
+
+		.smallIcon {
+			>img {
+				width: 1em;
+				object-fit: contain;
+			}
+	}
 	}
 }
 
